--- a/videoSharing/videoapp/templates/videoapp/videoView.html
+++ b/videoSharing/videoapp/templates/videoapp/videoView.html
@@ -19,7 +19,7 @@
             <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/logo.png' %}" alt="VideoBox"></a>
         </div>
 
-        <form action="{% url 'Search' %}" method="get" class="search_section">
+        <form action="" method="get" class="search_section">
             <input name="q" type="text" placeholder="Search...">
             <i class="fa fa-search" aria-hidden="true"></i>
         </form>
