--- a/videoSharing/videoapp/templates/videoapp/homepage.html
+++ b/videoSharing/videoapp/templates/videoapp/homepage.html
@@ -17,19 +17,25 @@
             <i class="fa fa-bars hamburger fa-6x" style="transform: scale(1.5,1);" aria-hidden="true"></i>
             <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/logo.png' %}" alt="VideoBox"></a>
         </div>
-
         <form action="{% url 'homepage' %}" method="get" class="search_section">
             <input name="q" type="text" placeholder="Search...">
             <i class="fa fa-search" aria-hidden="true"></i>
         </form>
+        {% if user.is_authenticated %}
         <div class="account_section">
-            <a href=""><button class="AuthButton" >
+            <h4 style="margin: 6px;font-size: 18px;font-family: sans-serif;letter-spacing: 0.5px;">{{user.username}}</h4>
+            <a href = "{% url 'logout' %}"><i class="fa fa-power-off" aria-hidden="true"></i></a>
+        </div>
+        {% else %}
+        <div class="account_section">
+            <a href="{% url 'login' %}"><button class="AuthButton" >
                Login
            </button> </a>
-           <a href=""><button class="AuthButton">
+           <a href="{% url 'register' %}"><button class="AuthButton">
                SignUp
            </button></a>
         </div>
+        {% endif %}
     </div>
 
 
@@ -55,10 +61,12 @@
                 <i class="fa fa-compass icon_sidebar" aria-hidden="true"></i>
                 <h2  class="sidebar_text" >Explore More</h2>
             </div>
+            {% if user.is_authenticated %}
             <div class="sidebars_field" id="sidebar-row">
                 <i class="fa fa-upload icon_sidebar" aria-hidden="true"></i>
                 <a href = "{% url 'UploadVideo' %}"><h2  class="sidebar_text" >Upload video</h2></a>
             </div>
+            {% endif %}
             <div class="sidebars_field" id="sidebar-row">
                 <i class="fa fa-user icon_sidebar" aria-hidden="true"></i>
                 <h2  class="sidebar_text" >Create Account</h2>
@@ -83,10 +91,7 @@
                 </div>
                 </a>
                 {% endfor %}
-
-
             </div>
-
         </div>
     </div>
 </body>
