--- a/videoSharing/videoapp/templates/videoapp/videoView.html
+++ b/videoSharing/videoapp/templates/videoapp/videoView.html
@@ -75,6 +75,9 @@
                 </div>
 
                 <p>{{ video.likes }} likes  &nbsp; ● Streamed live on {{ video.date }}</p>
+                {% if num_visits != 0 and user.is_authenticated %}
+                    <p>You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.</p>
+                {% endif %}
                 <div class="Next_ROW" style="height: 1.5px;width:1070px;"></div>
 
                 <div class="ProfileSection">
