--- a/videoSharing/videoapp/templates/videoapp/homepage.html
+++ b/videoSharing/videoapp/templates/videoapp/homepage.html
@@ -18,7 +18,7 @@
             <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/logo.png' %}" alt="VideoBox"></a>
         </div>
         <form action="{% url 'homepage' %}" method="get" class="search_section">
-            <input name="q" type="text" placeholder="Search...">
+            <input name="search_query" type="text" placeholder="Search...">
             <i class="fa fa-search" aria-hidden="true"></i>
         </form>
         {% if user.is_authenticated %}
