update trending feature

--- a/videoSharing/videoapp/templates/videoapp/homepage.html
+++ b/videoSharing/videoapp/templates/videoapp/homepage.html
@@ -47,10 +47,12 @@
                 <h2 class="sidebar_text"> Home </h2>
             </div>
             </a>
+            <a href="{% url 'trending' %}">
             <div class="sidebars_field" id="sidebar-row">
                 <i class="fa fa-heart icon_sidebar" aria-hidden="true" ></i>
                 <h2  class="sidebar_text" >Trending</h2>
             </div>
+            </a>
             <div class="sidebars_field" id="sidebar-row">
                 <i class="fa fa-cog icon_sidebar" aria-hidden="true" ></i>
                 <h2  class="sidebar_text" >Settings</h2>
