--- a/videoSharing/videoapp/static/css/homepage.css
+++ b/videoSharing/videoapp/static/css/homepage.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap');
 * {
     margin: 0;
 }
@@ -16,8 +16,52 @@ a {
     position: sticky;
     top:0;
     z-index: 100;
-    background-color: white;
+    /* background-color: white; */
+    background-image: linear-gradient(45deg,  rgba(66, 183, 245,0.8) 0%,rgba(66, 245, 189,0.4) 100%);
 }
+
+.search-input {
+    width: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    padding: 15px 45px 15px 15px;
+    background-color: #eaeaeb;
+    color: #6c6c6c;
+    border-radius: 6px;
+    border:none;
+    transition: all .4s;
+  }
+  
+  .search-input:focus {
+    border:none;
+    outline:none;
+    box-shadow: 0 1px 12px #b8c6db;
+    -moz-box-shadow: 0 1px 12px #b8c6db;
+    -webkit-box-shadow: 0 1px 12px #b8c6db;
+  }
+  
+  .search-btn {
+    background-color: transparent;
+    font-size: 18px;
+    padding: 6px 9px;
+    margin-left:-60px;
+    border:none;
+    color: #000000;
+    transition: all .4s;
+    z-index: 10;
+  }
+  
+  .search-btn:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+    color: black;
+  }
+  
+  .search-btn:focus {
+    outline:none;
+    color:black;
+  }
+  
 
 .logo-styles{
     height: 50px;
@@ -34,7 +78,7 @@ a {
     align-items:center;
     justify-content:center;
     width:40%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius:1px;
     padding: 0px;
     padding-top: 0px;
@@ -86,12 +130,13 @@ a {
 
 .main_code_body{
     display: flex;
+    height: 100vh;
 }
 
 .SideBars {
     flex:0.17;
-    background-color:white;
-
+    /* background-color:white; */
+    background-color: rgba(88, 192, 248, 0.8);
 }
 
 .TheVideoSection{
@@ -103,6 +148,7 @@ a {
 .TheVideoSection > h2{
     margin-left: 5px;
     margin-bottom: 20px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .VideoCard{
@@ -129,10 +175,12 @@ a {
 .video_text > h4{
     font-size: 14px;
     margin-bottom:5px;
+    font-family: 'Roboto', sans-serif;
 }
 .video_text >p{
-    font-size:14px;
+    font-size:13px;
     color:gray;
+    font-family: 'Roboto', sans-serif;
 
 }
 .VideoAvatar{
@@ -146,7 +194,7 @@ a {
     padding:10px 20px;
 }
 .sidebars_field:hover{
-    background-color:lightgray;
+    background-color:rgb(253, 249, 249);
     cursor: pointer;
 }
 
@@ -162,17 +210,17 @@ a {
 .icon_sidebar{
     margin-left: 15px;
     margin-right: 20px;
-    color: #606060;
+    color: #131212;
     font-size: large !important;
 }
 
 .sidebar_text{
-    color:#606060;
+    color:#131212;
     font-size: 0.8rem;
     flex: 1;
     font-weight: 700;
     letter-spacing:0.5px;
-    font-family: 'Rubik', sans-serif,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .Next_ROW {
