--- a/videoSharing/videoapp/templates/videoapp/homepage.html
+++ b/videoSharing/videoapp/templates/videoapp/homepage.html
@@ -14,13 +14,12 @@
 <body>
     <div class="header_section">
         <div class="left_section">
-            <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/logo.png' %}" alt="VideoBox"></a>
+            <!-- <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/logo.png' %}" alt="VideoBox"></a> -->
+            <h1>VideoBox</h1>
         </div>
         <form action="{% url 'homepage' %}" method="get" class="search_section">
-            <!-- <input name="search_query" type="text" placeholder="Search...">
-            <i class="fa fa-search" aria-hidden="true"></i> -->
             <input class="search-input" name="search_query" type="text" placeholder="Search something..">
-  <button class="search-btn"><i class="fa fa-search"></i></button>
+            <button class="search-btn"><span><div><i class="fa fa-search change-color"></i></div></span></button>
         </form>
         {% if user.is_authenticated %}
         <div class="account_section">
@@ -62,10 +61,6 @@
                 <a href = "{% url 'UploadVideo' %}"><h2  class="sidebar_text" >Upload video</h2></a>
             </div>
             {% endif %}
-            <div class="sidebars_field" id="sidebar-row">
-                <i class="fa fa-user icon_sidebar" aria-hidden="true"></i>
-                <h2  class="sidebar_text" >Create Account</h2>
-            </div>
         </div>
 
         <div class="TheVideoSection">
