--- a/videoSharing/videoapp/templates/videoapp/homepage.html
+++ b/videoSharing/videoapp/templates/videoapp/homepage.html
@@ -9,13 +9,21 @@
     <script src="{% static 'js/homepage.js' %}"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/0efb5bc93c.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Eczar' rel='stylesheet'>
     <title>VideoBox</title>
 </head>
 <body>
     <div class="header_section">
         <div class="left_section">
-            <!-- <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/logo.png' %}" alt="VideoBox"></a> -->
-            <h1>VideoBox</h1>
+            <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/stream.png' %}" alt="VideoBox" height="100%"></a>
+            <h1>StreamCastle</h1>
+            <!-- <h1>VideoBox</h1> -->
+            <style>
+                h1{
+                    font-family: 'Eczar';
+                    color: #d9d9d9;
+                }
+            </style>
         </div>
         <form action="{% url 'homepage' %}" method="get" class="search_section">
             <input class="search-input" name="search_query" type="text" placeholder="Search something..">
