--- a/videoSharing/videoapp/templates/videoapp/videoView.html
+++ b/videoSharing/videoapp/templates/videoapp/videoView.html
@@ -9,14 +9,22 @@
     <script src="{% static 'js/homepage.js' %}"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/0efb5bc93c.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Eczar' rel='stylesheet'>
     <title>Homepage</title>
 </head>
 <body>
     <!-- Header -->
     <div class="header_section">
         <div class="left_section">
-            <i class="fa fa-bars hamburger fa-6x" style="transform: scale(1.5,1);" aria-hidden="true"></i>
-            <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/logo.png' %}" alt="VideoBox"></a>
+            <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/stream.png' %}" alt="VideoBox" height="100%"></a>
+            <h1>StreamCastle</h1>
+            <!-- <h1>VideoBox</h1> -->
+            <style>
+                h1{
+                    font-family: 'Eczar';
+                    color: #d9d9d9;
+                }
+            </style>
         </div>
 
         <form action="" method="get" class="search_section">
