--- a/videoSharing/videoapp/templates/videoapp/homepage.html
+++ b/videoSharing/videoapp/templates/videoapp/homepage.html
@@ -16,7 +16,7 @@
     <div class="header_section">
         <div class="left_section">
             <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/stream.png' %}" alt="VideoBox" height="100%"></a>
-            <h1>StreamCastle</h1>
+            <a href="{% url 'homepage' %}"><h1>StreamCastle</h1></a>
             <!-- <h1>VideoBox</h1> -->
             <style>
                 h1{
