--- a/videoSharing/videoapp/templates/videoapp/login.html
+++ b/videoSharing/videoapp/templates/videoapp/login.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="logo-styles">
-  <a href="{% url 'homepage' %}"><img src="{% static 'images/logo.png' %}" style="width:230px;height: 80px;" alt="VideoBox"></a>
+  <a href="{% url 'homepage' %}"><img src="{% static 'images/stream.png' %}" style="width:80px ;height: 80px;" alt="VideoBox"></a>
 </div>
 
 <div class="container">
