--- a/videoSharing/videoapp/templates/videoapp/register.html
+++ b/videoSharing/videoapp/templates/videoapp/register.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="logo-styles">
-      <a href="{% url 'homepage' %}"><img src="{% static 'images/logo.png' %}" style="width:230px;height: 80px;" alt="VideoBox"></a>
+      <a href="{% url 'homepage' %}"><img src="{% static 'images/stream.png' %}" style="width:80px ;height: 80px;" alt="VideoBox"></a>
     </div>
     <div class="container" style="margin-top: 30px;width:400px">
       <h2>Sign Up</h2>
