--- a/videoSharing/videoapp/templates/videoapp/login.html
+++ b/videoSharing/videoapp/templates/videoapp/login.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+    <script src="{% static 'js/animations.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/0efb5bc93c.js"></script>
 </head>
 <body>
+  <div id="wrapper">
 <div class="logo-styles">
   <a href="{% url 'homepage' %}"><img src="{% static 'images/stream.png' %}" style="width:80px ;height: 80px;" alt="VideoBox"></a>
 </div>
@@ -23,6 +26,7 @@
     <button class="btn btn-success" type="submit" id="submit-button">Log In</button>
   </form>
   <div class="noacc">New to Videobox? <a href="{% url 'register' %}">Sign up</a></div>
+</div>
 </div>
 </body>
 </html>
