--- a/videoSharing/videoapp/templates/videoapp/register.html
+++ b/videoSharing/videoapp/templates/videoapp/register.html
@@ -1,16 +1,22 @@
 {% load static %} {% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+    <script src="{% static 'js/animations.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+</head>
+
+<body>
+  <div id="wrapper">
     <div class="logo-styles">
-      <a href="{% url 'homepage' %}"><img src="{% static 'images/stream.png' %}" style="width:80px ;height: 80px;" alt="VideoBox"></a>
+      <a href="{% url 'homepage' %}"><img src="{% static 'images/stream.png' %}" style="width:80px ;height: 80px;"
+          alt="VideoBox"></a>
     </div>
     <div class="container" style="margin-top: 30px;width:400px">
       <h2>Sign Up</h2>
@@ -24,5 +30,7 @@
         </div>
       </form>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
