--- a/videoSharing/videoapp/templates/videoapp/videoView.html
+++ b/videoSharing/videoapp/templates/videoapp/videoView.html
@@ -1,5 +1,7 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,117 +14,128 @@
     <link href='https://fonts.googleapis.com/css?family=Eczar' rel='stylesheet'>
     <title>Homepage</title>
 </head>
+
 <body>
-    <!-- Header -->
-    <div class="header_section">
-        <div class="left_section">
-            <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/stream.png' %}" alt="VideoBox" height="100%"></a>
-            <a href="{% url 'homepage' %}"><h1>StreamCastle</h1></a>
-            <!-- <h1>VideoBox</h1> -->
-            <style>
-                h1{
-                    font-family: 'Eczar';
-                    color: #d9d9d9;
-                }
-            </style>
+    
+        <!-- Header -->
+        <div class="header_section">
+            <div class="left_section">
+                <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/stream.png' %}"
+                        alt="VideoBox" height="100%"></a>
+                <a href="{% url 'homepage' %}">
+                    <h1>StreamCastle</h1>
+                </a>
+                <!-- <h1>VideoBox</h1> -->
+                <style>
+                    h1 {
+                        font-family: 'Eczar';
+                        color: #d9d9d9;
+                    }
+                </style>
+            </div>
+
+            <form action="" method="get" class="search_section">
+                <input class="search-input" name="search_query" type="text" placeholder="Search something..">
+                <button class="search-btn"><span>
+                        <div><i class="fa fa-search change-color"></i></div>
+                    </span></button>
+            </form>
+            {% if user.is_authenticated %}
+            <div class="account_section">
+                <h4 style="margin: 6px;font-size: 18px;font-family: sans-serif;letter-spacing: 0.5px;">{{user.username}}
+                </h4>
+                <a href="{% url 'logout' %}"><i class="fa fa-power-off" aria-hidden="true"></i></a>
+            </div>
+            {% else %}
+            <div class="account_section">
+                <a href="{% url 'login' %}"><button class="AuthButton">
+                        Login
+                    </button> </a>
+                <a href="{% url 'register' %}"><button class="AuthButton">
+                        SignUp
+                    </button></a>
+            </div>
+            {% endif %}
         </div>
 
-        <form action="" method="get" class="search_section">
-            <input class="search-input" name="search_query" type="text" placeholder="Search something..">
-            <button class="search-btn"><span><div><i class="fa fa-search change-color"></i></div></span></button>
-        </form>
-        {% if user.is_authenticated %}
-        <div class="account_section">
-            <h4 style="margin: 6px;font-size: 18px;font-family: sans-serif;letter-spacing: 0.5px;">{{user.username}}</h4>
-            <a href = "{% url 'logout' %}"><i class="fa fa-power-off" aria-hidden="true"></i></a>
-        </div>
-        {% else %}
-        <div class="account_section">
-            <a href="{% url 'login' %}"><button class="AuthButton" >
-               Login
-           </button> </a>
-           <a href="{% url 'register' %}"><button class="AuthButton">
-               SignUp
-           </button></a>
-        </div>
-        {% endif %}
-    </div>
+        <!-- Main Video Section -->
+        <div class="TheMainVideoSection">
+            <div class="videos">
+                <video width="1000" height="500" controls>
+                    <source src={{video.video.url}} type="video/mp4">
+                </video>
 
-    <!-- Main Video Section -->
-    <div class="TheMainVideoSection">
-        <div class="videos">
-            <video  width="1000" height="500" controls>
-                <source src={{video.video.url}} type="video/mp4">
-            </video>
+                <div class="Video_section">
+                    <div class="First_line">
+                        <h4>{{ video.title }}</h4>
+                        <div class="LikeUnlike">
+                            <form method="POST">
+                                {% csrf_token %}
+                                <button class="ldbutton" name="Like">
+                                    <i class="fa fa-thumbs-up" aria-hidden="true" id="IconResize"></i>
+                                </button>
+                            </form>
+                            <h4 class="LikeCount"> {{ video.likes }} </h4>
 
-            <div class="Video_section">
-                <div class="First_line">
-                    <h4>{{ video.title }}</h4>
-                    <div class="LikeUnlike">
-                        <form method="POST">
-                          {% csrf_token %}
-                        <button class="ldbutton" name="Like">
-                        <i class="fa fa-thumbs-up" aria-hidden="true" id="IconResize"></i>
-                      </button>
-                    </form>
-                    <h4 class="LikeCount"> {{ video.likes }} </h4>
-                    
-                    <form method="POST">
-                      {% csrf_token %}
-                    <button class="ldbutton" name="Dislike">
-                        <i class="fa fa-thumbs-down" aria-hidden="true" id="IconResize"></i>
-                    </button>
-                    </form>
-                    <h4 class="LikeCount">{{ video.dislikes }}</h4>
-                    </div>
-                
-                    <div class="Share_feature">
-                        <h4>Share</h4>
-                        <i class="fa fa-share-alt" aria-hidden="true" id="IconResize"></i>
-                    </div>
-                </div>
+                            <form method="POST">
+                                {% csrf_token %}
+                                <button class="ldbutton" name="Dislike">
+                                    <i class="fa fa-thumbs-down" aria-hidden="true" id="IconResize"></i>
+                                </button>
+                            </form>
+                            <h4 class="LikeCount">{{ video.dislikes }}</h4>
+                        </div>
 
-                <p>{{ video.likes }} likes  &nbsp; ● Streamed live on {{ video.date }}  &nbsp; ● {{ video.visits }} Views</p>
-                {% if num_visits != 0 and user.is_authenticated %}
-                    <p>You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.</p>
-                {% endif %}
-                <div class="Next_ROW" style="height: 1.5px;width:1070px;"></div>
-
-                <div class="ProfileSection">
-                    <div class="ProfileAccount">
-                        <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-                        <h4>{{video.user}}</h4>
-                    </div>
-                    <p>{{ video.description }}</p>
-                </div>
-                <div class="Next_ROW" style="height: 1.5px;width:1070px;"></div>
-                {% if user.is_authenticated %}
-                <h3> {{count}} Comments</h3>
-                <div class="MyComment">
-                <form method="POST">
-                    {% csrf_token %}
-                    <textarea rows="4" cols="110" placeholder="Enter a comment" name="Addcomment"></textarea>
-                    <button class="Comment_button" type="submit">Save</button>
-                </form>
-                {% endif %}
-                <div class="Comments">
-                </div>
-                <div class="OthersComment">
-                    {% for comment in comments %}
-                    <div class="SingleComment">
-                        <div class="AlignCommentItem" style="display: flex;">
-                            <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-                            <div class="NameText">
-                                <h4>{{comment.user}}</h4>
-                                <p>{{comment.comment_text}}</p>
-                            </div>
-
+                        <div class="Share_feature">
+                            <h4>Share</h4>
+                            <i class="fa fa-share-alt" aria-hidden="true" id="IconResize"></i>
                         </div>
                     </div>
-                    {% endfor %}
+
+                    <p>{{ video.likes }} likes &nbsp; ● Streamed live on {{ video.date }} &nbsp; ● {{ video.visits }}
+                        Views</p>
+                    {% if num_visits != 0 and user.is_authenticated %}
+                    <p>You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.</p>
+                    {% endif %}
+                    <div class="Next_ROW" style="height: 1.5px;width:1070px;"></div>
+
+                    <div class="ProfileSection">
+                        <div class="ProfileAccount">
+                            <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                            <h4>{{video.user}}</h4>
+                        </div>
+                        <p>{{ video.description }}</p>
+                    </div>
+                    <div class="Next_ROW" style="height: 1.5px;width:1070px;"></div>
+                    {% if user.is_authenticated %}
+                    <h3> {{count}} Comments</h3>
+                    <div class="MyComment">
+                        <form method="POST">
+                            {% csrf_token %}
+                            <textarea rows="4" cols="110" placeholder="Enter a comment" name="Addcomment"></textarea>
+                            <button class="Comment_button" type="submit">Save</button>
+                        </form>
+                        {% endif %}
+                        <div class="Comments">
+                        </div>
+                        <div class="OthersComment">
+                            {% for comment in comments %}
+                            <div class="SingleComment">
+                                <div class="AlignCommentItem" style="display: flex;">
+                                    <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                                    <div class="NameText">
+                                        <h4>{{comment.user}}</h4>
+                                        <p>{{comment.comment_text}}</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+        
 </body>
+
 </html>
