updated search in videoView.html

--- a/videoSharing/videoapp/templates/videoapp/videoView.html
+++ b/videoSharing/videoapp/templates/videoapp/videoView.html
@@ -34,7 +34,7 @@
                 </style>
             </div>
 
-            <form action="" method="get" class="search_section">
+            <form action="{% url 'homepage' %}" method="get" class="search_section">
                 <input class="search-input" name="search_query" type="text" placeholder="Search something..">
                 <button class="search-btn"><span>
                         <div><i class="fa fa-search change-color"></i></div>
