--- a/videoSharing/videoapp/templates/videoapp/homepage.html
+++ b/videoSharing/videoapp/templates/videoapp/homepage.html
@@ -15,7 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/0efb5bc93c.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Eczar' rel='stylesheet'>
-    <title>VideoBox</title>
+    <title>StreamCastle</title>
 </head>
 
 <body>
@@ -23,11 +23,10 @@
         <div class="header_section">
             <div class="left_section">
                 <a href="{% url 'homepage' %}"><img class="logo-styles" src="{% static 'images/stream.png' %}"
-                        alt="VideoBox" height="100%"></a>
+                        alt="StreamCastle" height="100%"></a>
                 <a href="{% url 'homepage' %}">
                     <h1>StreamCastle</h1>
                 </a>
-                <!-- <h1>VideoBox</h1> -->
                 <style>
                     h1 {
                         font-family: 'Eczar';
