--- a/videoSharing/videoapp/templates/videoapp/login.html
+++ b/videoSharing/videoapp/templates/videoapp/login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/0efb5bc93c.js"></script>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/stream.png' %}">
 </head>
 <body>
   <div id="wrapper">
