--- a/videoSharing/videoapp/templates/videoapp/trending.html
+++ b/videoSharing/videoapp/templates/videoapp/trending.html
@@ -12,7 +12,8 @@
     <script src="{% static 'js/animations.js' %}"></script>
     <script src="https://use.fontawesome.com/0efb5bc93c.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Eczar' rel='stylesheet'>
-    <title>VideoBox</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/stream.png' %}">
+    <title>StreamCastle</title>
 </head>
 
 <body>
