--- a/videoSharing/videoapp/templates/videoapp/videoView.html
+++ b/videoSharing/videoapp/templates/videoapp/videoView.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/0efb5bc93c.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Eczar' rel='stylesheet'>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/stream.png' %}">
     <title>{{video.title}}</title>
 </head>
 
