--- a/videoSharing/videoapp/templates/videoapp/register.html
+++ b/videoSharing/videoapp/templates/videoapp/register.html
@@ -10,13 +10,14 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
     <script src="{% static 'js/animations.js' %}"></script>
   <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+  <link rel="icon" type="image/x-icon" href="{% static 'images/stream.png' %}">
 </head>
 
 <body>
   <div id="wrapper">
     <div class="logo-styles">
       <a href="{% url 'homepage' %}"><img src="{% static 'images/stream.png' %}" style="width:80px ;height: 80px;"
-          alt="VideoBox"></a>
+          alt="StreamCastle"></a>
     </div>
     <div class="container" style="margin-top: 30px;width:400px">
       <h2>Sign Up</h2>
