--- a/videoSharing/videoapp/templates/videoapp/upload.html
+++ b/videoSharing/videoapp/templates/videoapp/upload.html
@@ -5,6 +5,7 @@
 <title>Video Upload</title>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 <script src="{% static 'js/animations.js' %}"></script>
+<link rel="icon" type="image/x-icon" href="{% static 'images/stream.png' %}">
 <link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock title %}
 
