minor changes in template and db

--- a/videoSharing/videoapp/templates/videoapp/videoView.html
+++ b/videoSharing/videoapp/templates/videoapp/videoView.html
@@ -88,10 +88,10 @@
                             <h4 class="LikeCount">{{ video.dislikes }}</h4>
                         </div>
 
-                        <div class="Share_feature">
+                        <!-- <div class="Share_feature">
                             <h4>Share</h4>
                             <i class="fa fa-share-alt" aria-hidden="true" id="IconResize"></i>
-                        </div>
+                        </div> -->
                     </div>
 
                     <p>{{ video.likes }} likes &nbsp; ● Streamed live on {{ video.date }} &nbsp; ● {{ video.visits }}
