--- a/videoSharing/videoapp/templates/videoapp/login.html
+++ b/videoSharing/videoapp/templates/videoapp/login.html
@@ -26,7 +26,7 @@
     {{ form|crispy }}
     <button class="btn btn-success" type="submit" id="submit-button">Log In</button>
   </form>
-  <div class="noacc">New to Videobox? <a href="{% url 'register' %}">Sign up</a></div>
+  <div class="noacc">New to StreamCastle? <a href="{% url 'register' %}">Sign up</a></div>
 </div>
 </div>
 </body>
