--- a/videoSharing/videoapp/templates/videoapp/404.html
+++ b/videoSharing/videoapp/templates/videoapp/404.html
@@ -1,45 +1,48 @@
 <div id="main">
     <div class="fof">
-            <h1>Error 404</h1>
+        <h1>Error 404</h1>
     </div>
 </div>
-
 <style>
-    *{
+  * {
     transition: all 0.6s;
-}
+  }
 
-html {
+  html {
     height: 100%;
-}
+  }
 
-body{
-    font-family: 'Lato', sans-serif;
+  body {
+    font-family: "Lato", sans-serif;
     color: #888;
     margin: 0;
-}
+  }
 
-#main{
+  #main {
     display: table;
     width: 100%;
     height: 100vh;
     text-align: center;
-}
+  }
 
-.fof{
-	  display: table-cell;
-	  vertical-align: middle;
-}
+  .fof {
+    display: table-cell;
+    vertical-align: middle;
+  }
 
-.fof h1{
-	  font-size: 100px;
-	  display: inline-block;
-	  padding-right: 12px;
-	  animation: type .5s alternate infinite;
-}
+  .fof h1 {
+    font-size: 100px;
+    display: inline-block;
+    padding-right: 12px;
+    animation: type 0.5s alternate infinite;
+  }
 
-@keyframes type{
-	  from{box-shadow: inset -3px 0px 0px rgb(244, 33, 33);}
-	  to{box-shadow: inset -3px 0px 0px transparent;}
-}
+  @keyframes type {
+    from {
+      box-shadow: inset -3px 0px 0px rgb(244, 33, 33);
+    }
+    to {
+      box-shadow: inset -3px 0px 0px transparent;
+    }
+  }
 </style>
